--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -86,7 +86,7 @@
         		<artifactId>heroku-maven-plugin</artifactId>
         		<version>2.0.3</version>
         		<configuration>
-        			<appName>aqueous-dawn-31732</appName>
+        			<appName>limitless-taiga-22814</appName>
         			<processTypes>
      					<web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
   					</processTypes>
